--- a/GettingStarted.ipynb
+++ b/GettingStarted.ipynb
@@ -6,7 +6,7 @@
       "name": "GettingStarted.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP+bjPwVcoOMLgWyXUGBkbz",
+      "authorship_tag": "ABX9TyMfxOiQmiIigWjpfYhBZ+sO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +99,7 @@
       "source": [
         "# Code cell"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,10 +122,11 @@
         "## Practice\n",
         "\n",
         "1. Create a couple new cells, some with text and some \"code\" cells with comments. Be sure to activate them.\n",
+        "2. Change a cell from \"text\" to \"code\" or vice versa. What changes?\n",
         "\n",
-        "2. Click around in the menus and find something that you don't understand. Create a new text cell and describe what you found.\n",
+        "3. Click around in the menus and find something that you don't understand. Create a new text cell and describe what you found.\n",
         "\n",
-        "3. Figure out how to delete one of your new cells."
+        "4. Figure out how to delete one of your new cells."
       ]
     },
     {
