--- a/GettingStarted.ipynb
+++ b/GettingStarted.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "GettingStarted.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMfxOiQmiIigWjpfYhBZ+sO",
+      "authorship_tag": "ABX9TyP5iB/maceXT8B5asoV/XHy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,29 +115,39 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "gGS7JXHS4E7x"
+      },
+      "source": [
+        "# Saving Colab Files to Your Drive"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6kj4f7yb4Nmb"
+      },
+      "source": [
+        "Throughout this workshop, you will be accessing Colab files from Github and opening them in Google. \n",
+        "\n",
+        "In order to save your work, make sure you click the \"Copy to Drive\" button next to \"+ Code\" and \"+ Text\" at the top of the file."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "KWMEj3O-6VaH"
       },
       "source": [
         "## Practice\n",
         "\n",
-        "1. Create a couple new cells, some with text and some \"code\" cells with comments. Be sure to activate them.\n",
-        "2. Change a cell from \"text\" to \"code\" or vice versa. What changes?\n",
+        "1. Create a copy of this notebook.\n",
+        "\n",
+        "2. Create a couple new cells, some as \"text\" cells and some as \"code\" cells with comments. Be sure to activate them.\n",
         "\n",
         "3. Click around in the menus and find something that you don't understand. Create a new text cell and describe what you found.\n",
         "\n",
         "4. Figure out how to delete one of your new cells."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Djwv257U7B4u"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
