--- a/Python101_Variables.ipynb
+++ b/Python101_Variables.ipynb
@@ -6,7 +6,7 @@
       "name": "Python101-Variables.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPYNGNjdZ/dbnk56h9vHDjq",
+      "authorship_tag": "ABX9TyMo1QxaN4jryVrA0n/IO5uu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "source": [
         "from IPython.display import Image"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -45,10 +45,7 @@
         "id": "krzYD5jJ87xy"
       },
       "source": [
-        "# Variables\n",
-        "\n",
-        "One of the first things to learn when learning to code is the \"variable\". A \"variable\" is a single word (or connected phrase) that we use to represent something else, and usually that something is complicated.\n",
-        "\n"
+        "# Variables\n"
       ]
     },
     {
@@ -75,7 +72,7 @@
       "source": [
         "Image(url=\"https://media.giphy.com/media/tGQFAuLzsabkI/giphy.gif\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +112,7 @@
       "source": [
         "help(\"keywords\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +168,7 @@
         "# in Jupyter, if you just give the name of a variable, it will display its contents below the code cell.\n",
         "pipe "
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -213,7 +210,7 @@
         "copper_pipe = \"a tube made out of copper.\"\n",
         "copper_pipe"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
