--- a/CommonErrorMessages.ipynb
+++ b/CommonErrorMessages.ipynb
@@ -6,7 +6,7 @@
       "name": "CommonErrorMessages.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNzxovstJPNoqbKhDtFQ7GN",
+      "authorship_tag": "ABX9TyMlI6YkYbzFW9gGylIKbIcZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "pipe = \"A tube for the smoking of Longbottom Leaf\"\n",
         "piipe"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -119,7 +119,7 @@
         "  if each % 2 == 0: \n",
         "  print(f\"{each} is even!\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -176,7 +176,7 @@
         "  else:\n",
         "    print(\"Not 4\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -223,7 +223,7 @@
       "source": [
         "print('End of line errors make for a sad day.\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -274,7 +274,7 @@
         "print(pipe[5:6])\n",
         "pipe[6] = 'r '"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +321,7 @@
         "print(pipe + \", the finest leaf in the South Farthing.\")\n",
         "print(pipe + \", the finest leaf. \" + 100)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +364,8 @@
         "If you get an error message, look for that bottom message of the type of error. Usually a search on Stack Overflow for the error type will get you started in the right direction.\n",
         "\n",
         "# Resources\n",
-        "- https://inventwithpython.com/blog/2012/07/09/16-common-python-runtime-errors-beginners-find/"
+        "- https://inventwithpython.com/blog/2012/07/09/16-common-python-runtime-errors-beginners-find/\n",
+        "- https://melaniewalsh.github.io/Intro-Cultural-Analytics/02-Python/13-Common-Python-Errors.html\n"
       ]
     },
     {
