--- a/GettingStarted.ipynb
+++ b/GettingStarted.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "GettingStarted.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP5iB/maceXT8B5asoV/XHy",
+      "authorship_tag": "ABX9TyP0z1BzQcAPksQ8GoJoJuLX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,29 +55,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kibp_p7G28F-",
-        "outputId": "297734a2-2872-4ace-bde8-5b518d8c9448"
+        "id": "kibp_p7G28F-"
       },
       "source": [
         "# This is a comment - any line that starts with a \"#\" is ignored by the Python kernel.\n",
         "# We use comments to leave notes for future users (self included) about what the code is doing.\n",
-        "# This is a code cell. \n",
-        "\n",
-        "print(\"Hello World!\")"
+        "# This is a code cell. "
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello World!\n"
-          ]
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -93,10 +79,23 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Afbus3CrrA44"
+      },
+      "source": [
+        "# Remove the pound sign on the next row  and activate the cell.\n",
+        "# print(\"Hello World!\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "yVlhce-g5zx4"
       },
       "source": [
-        "# Code cell"
+        "# Code cell\n",
+        "# Try experimenting in this cell."
       ],
       "execution_count": null,
       "outputs": []
@@ -140,7 +139,7 @@
       "source": [
         "## Practice\n",
         "\n",
-        "1. Create a copy of this notebook.\n",
+        "1. Save a copy of this notebook to Drive.\n",
         "\n",
         "2. Create a couple new cells, some as \"text\" cells and some as \"code\" cells with comments. Be sure to activate them.\n",
         "\n",
@@ -148,6 +147,17 @@
         "\n",
         "4. Figure out how to delete one of your new cells."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TStgUpxkrsgW"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
