Refresh and minor updates for CDH 507

--- a/2-Python101_Variables.ipynb
+++ b/2-Python101_Variables.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Python101-Variables.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMo1QxaN4jryVrA0n/IO5uu",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jerielizabeth/Workshops-ComputationalThinking/blob/main/Python101_Variables.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,14 +12,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "fy5f-DbNBj6v"
       },
+      "outputs": [],
       "source": [
         "from IPython.display import Image"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -61,6 +43,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -69,24 +52,9 @@
         "id": "REG6RTTmCoP3",
         "outputId": "5b326b91-210c-4841-a267-4fb0d94649e7"
       },
+      "outputs": [],
       "source": [
         "Image(url=\"https://media.giphy.com/media/tGQFAuLzsabkI/giphy.gif\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<img src=\"https://media.giphy.com/media/tGQFAuLzsabkI/giphy.gif\"/>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Image object>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
       ]
     },
     {
@@ -102,6 +70,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -109,30 +78,9 @@
         "id": "L-uzMLLKt-Fp",
         "outputId": "8e8907fa-9518-4b3f-8751-104ee03c0deb"
       },
+      "outputs": [],
       "source": [
         "help(\"keywords\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Here is a list of the Python keywords.  Enter any keyword to get more help.\n",
-            "\n",
-            "False               class               from                or\n",
-            "None                continue            global              pass\n",
-            "True                def                 if                  raise\n",
-            "and                 del                 import              return\n",
-            "as                  elif                in                  try\n",
-            "assert              else                is                  while\n",
-            "async               except              lambda              with\n",
-            "await               finally             nonlocal            yield\n",
-            "break               for                 not                 \n",
-            "\n"
-          ]
-        }
       ]
     },
     {
@@ -154,6 +102,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -162,27 +111,20 @@
         "id": "9PlzJjlAu0QH",
         "outputId": "256435da-ea23-4189-d18e-875456151e5c"
       },
+      "outputs": [],
       "source": [
-        "pipe = \"A tube for drawing in the smoke of tobacco.\"\n",
-        "\n",
         "# in Jupyter, if you just give the name of a variable, it will display its contents below the code cell.\n",
-        "pipe "
-      ],
+        "\n",
+        "pipe = \"A tube for drawing in the smoke of tobacco.\""
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'A tube for drawing in the smoke of tobacco.'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pipe "
       ]
     },
     {
@@ -198,6 +140,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -206,25 +149,10 @@
         "id": "BKtYuqfJvlzv",
         "outputId": "fc07fb16-c691-4244-abb3-a1cc7b3d57cf"
       },
+      "outputs": [],
       "source": [
         "copper_pipe = \"a tube made out of copper.\"\n",
         "copper_pipe"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'a tube made out of copper.'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
       ]
     },
     {
@@ -253,14 +181,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "FDB0g1tpw6GB"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -271,5 +197,33 @@
         "For more practice with variables, see https://melaniewalsh.github.io/Intro-Cultural-Analytics/02-Python/04-Variables.html. "
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMo1QxaN4jryVrA0n/IO5uu",
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "Python101-Variables.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "python101",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
