--- a/3-Python101_DataTypes.ipynb
+++ b/3-Python101_DataTypes.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Python101-DataTypes.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyOC2XXWCqM3LBjZZIiYspYf",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jerielizabeth/Workshops-ComputationalThinking/blob/main/Python101_DataTypes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -51,17 +34,49 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ugNyFc_H3pXR"
       },
+      "outputs": [],
       "source": [
         "short_string = \"I am a short string.\"\n",
         "long_string = 'I am also a string, but I am a long string.'\n",
         "very_long_string = \"\"\"I am such a long string that I extend over multiple lines.\n",
         "Also, this way line return is preserved.\"\"\""
-      ],
-      "execution_count": 2,
-      "outputs": []
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Do you remember how to display the value of one of those variables? Try below."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "When you want to get back some sort of text string from the computer, in Python we use the \"print\" function. This command tells the program to print out some message, often to the terminal.\n",
+        "\n",
+        "Functions consist of a command word, followed by ( ). The parentheses will contain the additional information that the function needs to run. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(\"Hello World\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -73,7 +88,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -81,23 +102,12 @@
         "id": "U6gNdd8p4VhW",
         "outputId": "be082a37-5a7c-44f2-e0e2-e35fbb51b048"
       },
+      "outputs": [],
       "source": [
         "print(f\"{short_string}\\n{long_string}\\n{very_long_string}\")\n",
+        "\n",
         "# This is an `f string` - a string where you can add variables, where the variables are contained in curly braces.\n",
         "# \\n is the symbol for new line or return. this is how you tell the computer to put a line break into a string."
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "I am a short string.\n",
-            "I am also a string, but I am a long string.\n",
-            "I am such a long string that I extend over multiple lines.\n",
-            "Also, this way line return is preserved.\n"
-          ]
-        }
       ]
     },
     {
@@ -111,6 +121,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -118,20 +129,10 @@
         "id": "SZhIZJ7442KR",
         "outputId": "2c50c4be-b9ba-4082-9d70-20e53f18df53"
       },
+      "outputs": [],
       "source": [
         "print(short_string.upper())\n",
         "print(short_string.lower())"
-      ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "I AM A SHORT STRING.\n",
-            "i am a short string.\n"
-          ]
-        }
       ]
     },
     {
@@ -145,14 +146,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "2TyjwVk06Llw"
       },
+      "outputs": [],
       "source": [
         "# Your string here"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -180,6 +181,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -187,25 +189,14 @@
         "id": "YQs6JXlL61Np",
         "outputId": "741d5763-3f13-48b1-e843-76ec4a0f1bb6"
       },
+      "outputs": [],
       "source": [
         "4*4"
-      ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "16"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -213,21 +204,9 @@
         "id": "gimOAmNA7Pyq",
         "outputId": "add6e7fe-96c7-40d3-e767-e32df2e24ee1"
       },
+      "outputs": [],
       "source": [
         "25/3"
-      ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "8.333333333333334"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
       ]
     },
     {
@@ -242,14 +221,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "eA8DHrm07pfk"
       },
+      "outputs": [],
       "source": [
         "# Your maths here."
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -266,14 +245,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "l5yRhljB84AH"
       },
+      "outputs": [],
       "source": [
         "list_of_things = [\"thing 1\", \"thing 2\", \"thing 3\"]"
-      ],
-      "execution_count": 14,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -286,6 +265,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -293,22 +273,10 @@
         "id": "jrUtS8V59BBV",
         "outputId": "6da45ddb-4a4a-4d1c-c90b-1cc40b2b9a76"
       },
+      "outputs": [],
       "source": [
         "list_of_things.append(\"thing 4\")\n",
         "list_of_things"
-      ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['thing 1', 'thing 2', 'thing 3', 'thing 4']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
       ]
     },
     {
@@ -322,6 +290,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -330,24 +299,9 @@
         "id": "aKWRSV0m9Tw9",
         "outputId": "b7ccb198-e920-4fde-ac78-cdc89cf6dde5"
       },
+      "outputs": [],
       "source": [
         "list_of_things[2]"
-      ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'thing 3'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
-        }
       ]
     },
     {
@@ -365,14 +319,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Uvewj4G1-GD6"
       },
+      "outputs": [],
       "source": [
         "# try creating lists here. "
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -389,17 +343,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "WLP90UC-_YOJ"
       },
+      "outputs": [],
       "source": [
         "dict_of_things = {\"fruit\": \"apple\",\n",
         "                  \"vegetable\": \"celery\",\n",
         "                  \"dairy\": \"cheese\"\n",
         "                  }"
-      ],
-      "execution_count": 17,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -412,6 +366,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -420,24 +375,9 @@
         "id": "VsRoUs4dAZEl",
         "outputId": "7abf4bfb-23e2-4d4d-dbb2-1eec56c4437a"
       },
+      "outputs": [],
       "source": [
         "dict_of_things[\"dairy\"]"
-      ],
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'cheese'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
-        }
       ]
     },
     {
@@ -451,6 +391,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -458,22 +399,10 @@
         "id": "x8O5MFv1AvY1",
         "outputId": "664edd0c-e3a1-48bf-9f20-0f3c9bbff2ba"
       },
+      "outputs": [],
       "source": [
         "dict_of_things['protein'] = 'soy'\n",
         "dict_of_things"
-      ],
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'dairy': 'cheese', 'fruit': 'apple', 'protein': 'soy', 'vegetable': 'celery'}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 20
-        }
       ]
     },
     {
@@ -487,14 +416,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "aNR7Tmf9A8oy"
       },
+      "outputs": [],
       "source": [
         "# Practice here"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -505,5 +434,32 @@
         "For more practice, see https://melaniewalsh.github.io/Intro-Cultural-Analytics/02-Python/05-Data-Types.html\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOC2XXWCqM3LBjZZIiYspYf",
+      "include_colab_link": true,
+      "name": "Python101-DataTypes.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "python101",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
