--- a/4-Python101_Loops.ipynb
+++ b/4-Python101_Loops.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Python101-Loops.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyNPOrPEakq9ZI++NaZ96MYu",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jerielizabeth/Workshops-ComputationalThinking/blob/main/Python101_Loops.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,14 +12,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "F_dDvgvQ1KMV"
       },
+      "outputs": [],
       "source": [
         "from IPython.display import Image"
-      ],
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -53,6 +36,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -61,36 +45,21 @@
         "id": "FfQiYmAs1L9V",
         "outputId": "f1067eea-5d46-40f0-c541-07b325633132"
       },
+      "outputs": [],
       "source": [
         "Image(url=\"https://media.giphy.com/media/ieaUdBJJC19uw/giphy.gif\")"
-      ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<img src=\"https://media.giphy.com/media/ieaUdBJJC19uw/giphy.gif\"/>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Image object>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "mY2bs5WDtado"
       },
+      "outputs": [],
       "source": [
         "list_of_strings = [\"Jack Skellington\", \"Sally\", \"Oogie Boogie\", \"Zero\", \"Dr. Finkelstein\", \"Sandy Claws\"]"
-      ],
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -117,6 +86,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -124,28 +94,15 @@
         "id": "fLWvp4yAuw2Y",
         "outputId": "03823dae-3c4b-417e-8277-94fd0332081f"
       },
+      "outputs": [],
       "source": [
         "for character in list_of_strings:\n",
         "  print(character)"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Jack Skellington\n",
-            "Sally\n",
-            "Oogie Boogie\n",
-            "Zero\n",
-            "Dr. Finkelstein\n",
-            "Sandy Claws\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -153,48 +110,28 @@
         "id": "yhKzdH41wGKX",
         "outputId": "ca26f664-0cad-486a-887e-d913271b5e4c"
       },
+      "outputs": [],
       "source": [
         "for character in list_of_strings:\n",
         "  # print, change to lower case, then print again\n",
         "  print(character)\n",
         "  lower_case = character.lower()\n",
         "  print(lower_case)"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Jack Skellington\n",
-            "jack skellington\n",
-            "Sally\n",
-            "sally\n",
-            "Oogie Boogie\n",
-            "oogie boogie\n",
-            "Zero\n",
-            "zero\n",
-            "Dr. Finkelstein\n",
-            "dr. finkelstein\n",
-            "Sandy Claws\n",
-            "sandy claws\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "qQZbtMF2wa30"
       },
+      "outputs": [],
       "source": [
         "# You try this one: \n",
         "\n",
         "for character in list_of_strings:\n",
         "  # print, change to upper case, then print again"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -207,6 +144,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -214,23 +152,10 @@
         "id": "H-_6Xzoxw6fy",
         "outputId": "ed809881-112c-4102-8362-fb7c65fdc6b6"
       },
+      "outputs": [],
       "source": [
         "for each in range(5):\n",
         "  print(each)"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n"
-          ]
-        }
       ]
     },
     {
@@ -253,6 +178,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -260,24 +186,10 @@
         "id": "EXKMRbxXxJH-",
         "outputId": "7b26b9ab-a3dc-4df4-cd39-3b1eb70a8989"
       },
+      "outputs": [],
       "source": [
         "for number, character in enumerate(list_of_strings):\n",
         "  print(f\"{number}: {character}\")"
-      ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0: Jack Skellington\n",
-            "1: Sally\n",
-            "2: Oogie Boogie\n",
-            "3: Zero\n",
-            "4: Dr. Finkelstein\n",
-            "5: Sandy Claws\n"
-          ]
-        }
       ]
     },
     {
@@ -306,14 +218,39 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Uz-_j-r40va1"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNPOrPEakq9ZI++NaZ96MYu",
+      "include_colab_link": true,
+      "name": "Python101-Loops.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "python101",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
