--- a/5-Python101_Logic.ipynb
+++ b/5-Python101_Logic.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Python101-Logic.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyMxtmqV5Uoz3z1Tj8QE6NCq",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jerielizabeth/Workshops-ComputationalThinking/blob/main/Python101_Logic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,14 +12,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "DgY-37-c2MbO"
       },
+      "outputs": [],
       "source": [
         "from IPython.display import Image"
-      ],
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -49,6 +32,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -57,24 +41,9 @@
         "id": "6aGOia3G1zk7",
         "outputId": "a4185f6d-481f-4aa9-9bf4-37ed21c139d7"
       },
+      "outputs": [],
       "source": [
         "Image(url=\"https://media.giphy.com/media/TZKFBveHtquAM/giphy.gif\")"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<img src=\"https://media.giphy.com/media/TZKFBveHtquAM/giphy.gif\"/>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Image object>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
       ]
     },
     {
@@ -101,43 +70,32 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "--aSl8rZ6C5Q",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "--aSl8rZ6C5Q",
         "outputId": "e8d929b5-e4b0-47b9-f91b-0dfc021f4fd5"
       },
+      "outputs": [],
       "source": [
         "x = 10\n",
         "y = 30\n",
         "\n",
         "y == 2*x"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "5QUj-yx26anh"
       },
+      "outputs": [],
       "source": [
         "# Try out another comparison here"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -150,6 +108,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -157,21 +116,9 @@
         "id": "VI5lpa7_6_qH",
         "outputId": "552126b8-7ad2-45d9-b145-fff397f204b3"
       },
+      "outputs": [],
       "source": [
         "x > 5 and y < 50"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
       ]
     },
     {
@@ -185,14 +132,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "-9JeGpFn7aMz"
       },
+      "outputs": [],
       "source": [
         "# Try out some other logical operators."
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -210,6 +157,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -217,6 +165,7 @@
         "id": "Kt3OBVz68aZ1",
         "outputId": "7ca16633-7b06-4256-cc6e-301a84d60983"
       },
+      "outputs": [],
       "source": [
         "list_of_strings = [\"Jack Skellington\", \"Sally\", \"Oogie Boogie\", \"Zero\", \"Dr. Finkelstein\", \"Sandy Claws\"]\n",
         "\n",
@@ -226,21 +175,6 @@
         "  else:\n",
         "    first_letter = each[0]\n",
         "    print(f\"First letter is {first_letter}\")"
-      ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "First letter is J\n",
-            "Sally\n",
-            "First letter is O\n",
-            "First letter is Z\n",
-            "First letter is D\n",
-            "Sandy Claws\n"
-          ]
-        }
       ]
     },
     {
@@ -254,6 +188,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -261,6 +196,7 @@
         "id": "GtmLBT52A8HE",
         "outputId": "7ade4810-3d5c-4318-f129-e506190d9fe0"
       },
+      "outputs": [],
       "source": [
         "for each in list_of_strings:\n",
         "  if each.startswith('S'):\n",
@@ -270,28 +206,15 @@
         "  else:\n",
         "    first_letter = each[0]\n",
         "    print(f\"First letter is {first_letter}\")"
-      ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Jack Skellington is the best!\n",
-            "Sally\n",
-            "First letter is O\n",
-            "First letter is Z\n",
-            "First letter is D\n",
-            "Sandy Claws\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "61kbka0nBJvA"
       },
+      "outputs": [],
       "source": [
         "# Try changing one of the conditions. Then try to add another elif condition.\n",
         "for each in list_of_strings:\n",
@@ -302,20 +225,18 @@
         "  else:\n",
         "    first_letter = each[0]\n",
         "    print(f\"First letter is {first_letter}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ZYg10ZCABg0e"
       },
+      "outputs": [],
       "source": [
         "# Create a new list. Then loop through it with one conditional fork. "
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -328,14 +249,39 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "3zU6ALjPTgBe"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMxtmqV5Uoz3z1Tj8QE6NCq",
+      "include_colab_link": true,
+      "name": "Python101-Logic.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "python101",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
