--- a/6-Python101-ExtendingPython.ipynb
+++ b/6-Python101-ExtendingPython.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "ExtendingPython.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyP9Pw8YBnkqQ04Zm80Db2aL",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jerielizabeth/Workshops-ComputationalThinking/blob/main/ExtendingPython.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -42,14 +25,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "qu86OtrmrzrT"
       },
+      "outputs": [],
       "source": [
         "from bs4 import BeautifulSoup"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -62,36 +45,36 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "_VRITz3UtB70"
       },
+      "outputs": [],
       "source": [
         "import requests"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "T3kzW1e4tv9m"
       },
+      "outputs": [],
       "source": [
-        "r = requests.get('http://digitallab.religion.ua.edu/')"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "r = requests.get('https://cdh.princeton.edu/programs/graduate-program/')"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "LC-JUTG_t7se"
       },
+      "outputs": [],
       "source": [
         "r.text"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -104,42 +87,42 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "238Dk7Scuw4B"
       },
+      "outputs": [],
       "source": [
         "# First we pass the whole HTML object to Beautiful Soup\n",
         "soup = BeautifulSoup(r.text, 'html.parser')\n",
         "\n",
         "# Then we can start to do things"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "uAuGXUGkvHLU"
       },
+      "outputs": [],
       "source": [
         "# Such as, we make the HTML text pretty\n",
         "print(soup.prettify())"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Lp5oB6-ovWcn"
       },
+      "outputs": [],
       "source": [
         "# Or we can request all of the links from the page\n",
         "\n",
         "soup.find_all('a')"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -155,14 +138,39 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "8mfrPSXvwdMK"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyP9Pw8YBnkqQ04Zm80Db2aL",
+      "include_colab_link": true,
+      "name": "ExtendingPython.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "python101",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
