change findall from links to paragraphs

--- a/6-Python101-ExtendingPython.ipynb
+++ b/6-Python101-ExtendingPython.ipynb
@@ -121,7 +121,7 @@
       "source": [
         "# Or we can request all of the links from the page\n",
         "\n",
-        "soup.find_all('a')"
+        "soup.find_all('p')"
       ]
     },
     {
